[package]
name = "alita_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["utils","client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = { version = "1.29.1", features = ["full"] }