[package]
name = "alita_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["utils","client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = { version = "1.29.1", features = ["full"] }
dotenvy = "0.15.7"
openai = "1.0.0-alpha.13"

serde_json = "1.0.94"
derive_builder = "0.12.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"], optional = true }
serde = { version = "1.0.157", features = ["derive"] }
reqwest-eventsource = "0.4.0"
anyhow = "1.0.70"
futures-util = "0.3.28"
bytes = "1.4.0"