[package]
name = "alita_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#discord Api
serenity = {version = "0.11", default-features = false, features = ["utils","client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}

# Environment Variales
dotenvy = "0.15.7"
openai = "1.0.0-alpha.13"

#async functions
tokio = { version = "1.29.1", features = ["full"] }

# http library
hyper = { version = "^0.14", features = ["full"]}
hyper-tls = "^0.5"

# Serialization
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_derive = "^1"

#extra stuff
spinners = "^2"

derive_builder = "0.12.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"], optional = true }
reqwest-eventsource = "0.4.0"
anyhow = "1.0.70"
futures-util = "0.3.28"
bytes = "1.4.0"